add notification popups

--- a/src/app/league-zone/league-manage/league-manage-draft/league-manage-draft.component.html
+++ b/src/app/league-zone/league-manage/league-manage-draft/league-manage-draft.component.html
@@ -1,3 +1,5 @@
+<app-league-notifications></app-league-notifications>
+<button (click)="testNotification()">Show Test Notification</button>
 @for (team of teams; track team.name) {
   <div class="team-draft-container">
     <h2 class="team-name">{{ team.name }}</h2>
