--- a/src/app/league-zone/league-drafting/league-drafting.component.html
+++ b/src/app/league-zone/league-drafting/league-drafting.component.html
@@ -6,7 +6,20 @@
     <div class="draft-panel">
       <div class="info-container">
         <div class="league-name">{{ leagueName }}</div>
-        <div class="division-name">Division: {{ divisionName }}</div>
+        <div class="info-details-container">
+          <div class="division-name">Division: {{ divisionName }}</div>
+          <div
+            class="draft-status"
+            [ngClass]="{
+              'in-progress': draftDetails.status === 'IN_PROGRESS',
+              paused: draftDetails.status === 'PAUSED',
+              'pre-draft': draftDetails.status === 'PRE_DRAFT',
+              completed: draftDetails.status === 'COMPLETED',
+            }"
+          >
+            {{ draftDetails.status.replace("_", " ") | titlecase }}
+          </div>
+        </div>
       </div>
       <button class="planner-link fancy-font">
         Planner <mat-icon>open_in_new</mat-icon>
@@ -135,7 +148,14 @@
                         {{ position.name }}
                       </span>
                     </div>
-                    <div class="team-card-body">
+                    <div
+                      class="team-card-body"
+                      [ngClass]="{
+                        picking:
+                          currentPick.round === roundIndex &&
+                          currentPick.position === $index,
+                      }"
+                    >
                       <div class="team-card-icon">
                         @if (pokemon) {
                           <pdz-sprite [pokemon]="pokemon"></pdz-sprite>
@@ -144,7 +164,7 @@
                           currentPick.position === $index
                         ) {
                           <span class="skip-time">
-                            {{ timeUntil(currentPick.skipTime) }}
+                            {{ skipTimeDisplay }}
                           </span>
                         } @else {
                           <mat-icon svgIcon="pokeball"></mat-icon>
