--- a/src/app/league-zone/league-manage/league-manage-draft/league-manage-draft.component.html
+++ b/src/app/league-zone/league-manage/league-manage-draft/league-manage-draft.component.html
@@ -19,7 +19,12 @@
       <mat-icon>play_arrow</mat-icon>
     </button>
   }
-  <button mat-icon-button aria-label="Skip turn" class="skip-button">
+  <button
+    mat-icon-button
+    aria-label="Skip turn"
+    class="skip-button"
+    (click)="skipNext()"
+  >
     <mat-icon>skip_next</mat-icon>
   </button>
 </div>
@@ -33,36 +38,27 @@
           <th scope="col" class="draft-table-header">Sprite</th>
           <th scope="col" class="draft-table-header">Pokemon</th>
           <th scope="col" class="draft-table-header">Tier</th>
-          <th scope="col" class="draft-table-header">Timestamp</th>
-          <th scope="col" class="draft-table-header">Picker</th>
-          <th scope="col" class="draft-table-header"></th>
+          <!-- <th scope="col" class="draft-table-header"></th> -->
         </tr>
       </thead>
       <tbody class="draft-table-body">
-        @for (pick of team.draft; track pick.pokemon.id) {
+        @for (pokemon of team.draft; track pokemon.id) {
           <tr class="draft-table-row">
             <td class="draft-table-cell">
-              <pdz-sprite
-                [pokemon]="pick.pokemon"
-                size="3rem"
-                flipped
-              ></pdz-sprite>
+              <pdz-sprite [pokemon]="pokemon" size="3rem" flipped></pdz-sprite>
             </td>
 
-            <td class="draft-table-cell">{{ pick.pokemon.name }}</td>
-            <td class="draft-table-cell">{{ pick.pokemon.tier }}</td>
-            <td class="draft-table-cell">
-              {{ pick.timestamp | date: "short" }}
-            </td>
-            <td class="draft-table-cell">{{ pick.picker }}</td>
-            <td class="draft-table-cell">
+            <td class="draft-table-cell">{{ pokemon.name }}</td>
+            <td class="draft-table-cell">{{ pokemon.tier }}</td>
+
+            <!-- <td class="draft-table-cell">
               <button matIconButton (click)="editDraftPick(team)">
                 <mat-icon>edit</mat-icon>
               </button>
               <button matIconButton (click)="deleteDraftPick(team)">
                 <mat-icon>delete_forever</mat-icon>
               </button>
-            </td>
+            </td> -->
           </tr>
         } @empty {
           <tr class="draft-table-row">
