--- a/src/app/league-zone/league-drafting/league-drafting.component.html
+++ b/src/app/league-zone/league-drafting/league-drafting.component.html
@@ -21,9 +21,9 @@
           </div>
         </div>
       </div>
-      <button class="planner-link fancy-font">
+      <a class="planner-link fancy-font" target="_blank" routerLink="/planner">
         Planner <mat-icon>open_in_new</mat-icon>
-      </button>
+      </a>
       <div class="my-draft-main draft-section">
         <div class="custom-dropdown-container">
           <button
